# awa

./: .env.dist  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  compose.yaml  flake.nix  pyproject.toml  taskfile.yaml
.direnv/: flake-profile-1-link
.github/workflows/: main.yml  pr.yml
bruno/awa/: Chat.bru  Create Session.bru  bruno.json  collection.bru
bruno/awa/environments/: dev.bru  local.bru
core/: pyproject.toml
core/src/: container.py  enums.py  interview_answer_agent.py  main.py  schemas.py  services.py  settings.py
core/src/agents/awa/: agent.py
core/tests/: conftest.py  test_main.py
src/: main.py
tests/: test_main.py
web/: nx.json  package-lock.json
